# LoopedHRM

./: .gitignore  README.md  pyproject.toml
configs/experiment/: sudoku_baseline.yaml
configs/model/: hierarchical_solver.yaml
docs/: design_doc.md
scripts/: eval.py  train.py  validate_sudoku_dataset.py
src/looped_hrm/compute/: halting.py
src/looped_hrm/data/: sudoku_dataset.py
src/looped_hrm/evaluation/: metrics.py
src/looped_hrm/models/: hierarchical_solver.py
src/looped_hrm/training/: losses.py  trainer.py
src/looped_hrm/utils/: types.py
tests/: test_hierarchical_solver.py  test_metrics.py  test_skeleton.py  test_sudoku_dataset.py
