[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "looped-hrm"
version = "0.1.0"
description = "Skeleton repo for two-level adaptive compute research with Sudoku"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "torch>=2.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
